--- a/example/Pipfile
+++ b/example/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [requires]
 
 python_version = "3.6"
+
 
 [packages]
 
@@ -14,9 +16,15 @@ pytest = "*"
 "flake8" = "*"
 django = ">=2.0"
 djangorestframework = "*"
-"dj-database-url" = "*"
+dj-database-url = "*"
 "psycopg2" = "*"
-"stump" = {path = "./..", editable = true}
+entity = {git = "ssh://git@github.com/The-Politico/politico-civic-entity", editable = true}
+geography = {git = "ssh://git@github.com/The-Politico/politico-civic-geography", editable = true}
+government = {git = "ssh://git@github.com/The-Politico/politico-civic-government", editable = true}
+election = {git = "ssh://git@github.com/The-Politico/politico-civic-election", editable = true}
+stump = {path = "./..", editable = true}
+geopy = "*"
 
 
 [dev-packages]
+
